# marketing-engine

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
channels/hearthstone/: README.md  config.yaml
channels/hearthstone/scripts/: assemble_longform.py  generate_ambient.py
channels/holmes-wisdom/: README.md  config.yaml  requirements.txt
channels/holmes-wisdom/docs/: DESIGN.md
channels/holmes-wisdom/scripts/: assemble_short.py  extract_passage.py  generate_captions.py  generate_visuals.py  generate_voiceover.py  pipeline.py  preprocess_source.py
channels/new-eden-whispers/: README.md
channels/new-eden-whispers/docs/: DESIGN.md
channels/root-note/: README.md  config.yaml
channels/root-note/scripts/: extract_instrument.py  pipeline.py
channels/story-fire/: README.md  config.yaml  requirements.txt
channels/story-fire/docs/: DESIGN.md
channels/story-fire/scripts/: assemble_short.py  extract_tale.py  generate_captions.py  generate_visuals.py  generate_voices.py  pipeline.py
channels/timeless-clips/: README.md  pyproject.toml
channels/timeless-clips/docs/: DESIGN.md
channels/timeless-clips/src/timeless_clips/: __init__.py  __main__.py  captions.py  catalog.py  cli.py  compose.py  config.py  discover.py  download.py  extract_moment.py  models.py  narration.py  pipeline.py
channels/timeless-clips/tests/: conftest.py  test_captions.py  test_catalog.py  test_cli.py  test_compose.py  test_config.py  test_discover.py  test_download.py  test_extract_moment.py  test_models.py  test_narration.py  test_pipeline.py
configs/: brand_voice.yaml  platform_rules.yaml  schedule_rules.yaml
docs/: DESIGN.md
src/marketing_engine/: __init__.py  __main__.py  approval.py  cli.py  config.py  db.py  enums.py  exceptions.py  export.py  formatters.py  licensing.py  models.py  pipeline.py
src/marketing_engine/agents/: base.py  draft.py  format.py  queue.py  research.py
src/marketing_engine/llm/: base.py  ollama.py
src/marketing_engine/publishers/: __init__.py  base.py  linkedin.py  reddit.py  result.py  scheduler.py  twitter.py
tests/: conftest.py  test_agent_base.py  test_agent_draft.py  test_agent_format.py  test_agent_queue.py  test_agent_research.py  test_approval.py  test_cli.py  test_cli_publish.py  test_config.py  test_config_credentials.py  test_db.py  test_db_publish.py  test_enums.py  test_exceptions.py  test_export.py  test_formatters.py  test_licensing.py  test_llm_base.py  test_llm_ollama.py  test_models.py  test_pipeline.py  test_publishers_base.py  test_publishers_linkedin.py  test_publishers_reddit.py  test_publishers_result.py  test_publishers_scheduler.py  test_publishers_twitter.py
