[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-engine"
version = "0.1.0"
description = "LLM-powered content generation, approval queue, and cross-platform export"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "AreteDriver"}]
keywords = ["marketing", "content", "llm", "social-media", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
anthropic = ["anthropic>=0.40.0"]

[project.scripts]
marketing-engine = "marketing_engine.cli:app"

[project.urls]
Homepage = "https://github.com/AreteDriver/marketing-engine"
Repository = "https://github.com/AreteDriver/marketing-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/marketing_engine/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["marketing_engine"]

[tool.coverage.report]
fail_under = 80
show_missing = true
